tests/assembler/fail/test10.ial
type ZeroSizeVector
{
    field instance float32[0] vec;
}
